--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>将棋の殿堂｜四段昇段年齢</title>
+  <title>将棋棋士の四段昇段年齢</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <!-- ▼ CSSにキャッシュバスター（値は更新ごとに変えてOK） -->
-  <link rel="stylesheet" href="style.css?v=20250930a">
+  <link rel="stylesheet" href="style.css?v=20251001a">
   <style>
   /* section 内の p を全部中央寄せ */
   section > p { text-align: center; }
@@ -269,7 +269,7 @@
   }
 
   /* ▼ “いちばん下”の追記：値だけ変えれば即反映 */
-  const V = '20250930a';  // ← 更新ごとに変える
+  const V = '20251001a';  // ← 更新ごとに変える
   /* ▲ main() より上に置く（ここでOK） */
 
   main().catch(err => {
