--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </div>
 
 <div class="free">
-  <span class="sort-label">並び替え：</span>
+  <span class="sort-label">並び替え:</span>
 
   <select id="sortKey">
     <option value="kishiNumber">棋士番号</option>
