--- a/index.html
+++ b/index.html
@@ -55,6 +55,20 @@
   gap: 10px; /* セレクトとラジオの間隔 */
 }
 
+#sortKey,
+.sort-order {
+  display: inline-flex;
+  align-items: center;
+}
+
+.sort-order {
+  gap: 8px;
+}
+
+#sortKey {
+  margin-right: 10px;
+}
+
 /* ラジオボタンのまとまりに少し余白をもたせる場合（任意） */
 .free .sort-order {
   display: flex;
