--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>将棋の殿堂｜四段昇段年齢</title>
+  <title>将棋棋士の四段昇段平均年齢・中央値</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <!-- ▼ CSSにキャッシュバスター（値は更新ごとに変えてOK） -->
   <link rel="stylesheet" href="style.css?v=20251001-d">
@@ -122,7 +122,7 @@
     <p>各棋士の四段昇段年齢は、日本将棋連盟の<a href="https://www.shogi.or.jp/player/" target="_blank" rel="noopener noreferrer">
   棋士データベース</a>の各棋士の生年月日と四段昇段日より算出しました。</p>
    
-    <p>四段昇段時の平均年齢は、各棋士の「生年月日から四段昇段日までの日数」から算術平均を求め、その平均日数をグレゴリオ暦の1年の平均日数である365.2425日（1ヶ月はその1/12＝30.436875日）で年・月・日に分解して「○歳○ヶ月○日」と近似表示しています。</p>
+    <p>四段昇段平均年齢は、各棋士の「生年月日から四段昇段日までの日数」の平均を求め、それをグレゴリオ暦の1年の平均日数である365.2425日（1ヶ月はその1/12＝30.436875日）で年・月・日に分解して「○歳○ヶ月○日」と表示しています。</p>
   </div>
 </main>
 
