--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <div class="free" id="jumpBox">
   <span><!-- 件数表示 --></span>
-  <button type="button">ページの下まで移動</button>
+  <button type="button">出典・算出方法を読む</button>
 </div>
 
 <div class="free">
@@ -117,13 +117,17 @@
 
   <!-- 補足情報 -->
   <div class="free">
-    <h3>補足情報</h3>
+    <h3>各情報の出典</h3>
        <p>奨励会三段リーグが開始した1987年6月から2025年10月1日付で四段へ昇段した棋士までの、棋士編入試験合格者を含む棋士番号184以降の全167名の棋士が対象。</p>
     <p>各棋士の四段昇段年齢は、日本将棋連盟の<a href="https://www.shogi.or.jp/player/" target="_blank" rel="noopener noreferrer">
   棋士データベース</a>の各棋士の生年月日と四段昇段日より算出しました。</p>
-   
-    <p>四段昇段平均年齢は、各棋士の「生年月日から四段昇段日までの日数」の平均を求め、それをグレゴリオ暦の1年の平均日数である365.2425日（1ヶ月はその1/12＝30.436875日）で年・月・日に分解して「○歳○ヶ月○日」と表示しています。</p>
+    
+  <div class="free">
+    <h3>平均年齢の算出方法</h3>
+    <p>167名の棋士の、生年月日の平均の日付（1985-03-30）と四段昇段日の平均の日付（2007-06-10）を求め、その期間が22年2ヶ月11日なので、そのまま22歳2ヶ月11日としています。</p>
+    <p>その下の平均日数8107.1日（≒22年2ヶ月11日）は、各棋士の「生年月日から四段昇段日までの日数」の平均数値です。</p>
   </div>
+    </div>
 </main>
 
 <!-- フッターに “上へ” ボタン -->
