--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
        <p>奨励会三段リーグが開始した1987年6月から2025年10月1日付で四段へ昇段した棋士までの、棋士編入試験合格者を含む棋士番号184以降の全167名の棋士が対象。</p>
     <p>各棋士の四段昇段年齢は、日本将棋連盟の<a href="https://www.shogi.or.jp/player/" target="_blank" rel="noopener noreferrer">
   棋士データベース</a>の各棋士の生年月日と四段昇段日より算出しました。</p>
-    
+    </div>
+
   <div class="free">
     <h3>平均年齢の算出方法</h3>
     <p>167名の棋士の、生年月日の平均の日付（1985-03-30）と四段昇段日の平均の日付（2007-06-10）を求め、その期間が22年2ヶ月11日なので、そのまま22歳2ヶ月11日としています。</p>
