--- a/age.html
+++ b/age.html
@@ -67,7 +67,7 @@
 <body>
 <header>
   <!-- ヘッダー -->
-  <p><a href="">TOPページに戻る</a></>
+  <p><a href="https://ulti-shogi.github.io/beta-open/index.html">TOPページに戻る</a></>
 </header>
 
 <main>
