--- a/title-all.html
+++ b/title-all.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 <header>
-<p><a href="">TOPページに戻る</a></p>
+<p><a href="https://ulti-shogi.github.io/beta-open/index.html">TOPページに戻る</a></>
 </header>
 <main>
 <section>
