--- a/kishi.html
+++ b/kishi.html
@@ -53,7 +53,7 @@ div.card .entry[data-status="現役"] {
 </head>
 <body>
   <header>
-    <p><a href="">TOPページに戻る</a></p>
+    <p><a href="https://ulti-shogi.github.io/beta-open/index.html">TOPページに戻る</a></>
   </header>
 <main>
   <section>
