--- a/rate.html
+++ b/rate.html
@@ -35,7 +35,7 @@
     <thead></thead>
     <tbody></tbody>
   </table>
-
+<button id="saveImageBtn" style="margin: 15px 0;">この表を画像として保存</button>
 <div class="free">
   <h3>出典</h3>
   <p>1960〜2019年度の記録：将棋世界2020年6月号『追跡！藤井聡太2020』より</p>
@@ -222,6 +222,31 @@ document.addEventListener('DOMContentLoaded', () => {
         renderLimited(criteria);
       });
     });
+});
+
+</script>
+
+<!-- ✅ html2canvas 読み込み -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
+<script>
+// ✅ 「この表を画像として保存」ボタン処理
+document.getElementById('saveImageBtn').addEventListener('click', () => {
+  const table = document.querySelector('table');
+
+  // 一時的に背景色やフォントを固定（ズレ防止）
+  table.style.backgroundColor = '#ffffff';
+  table.style.fontFamily = 'sans-serif';
+
+  html2canvas(table, {
+    scale: 2, // 解像度アップ
+    useCORS: true
+  }).then(canvas => {
+    const link = document.createElement('a');
+    link.href = canvas.toDataURL('image/png');
+    link.download = 'shogi-table.png';
+    link.click();
+  });
 });
 </script>
   </main>
