--- a/title-all.html
+++ b/title-all.html
@@ -94,6 +94,39 @@
   <tbody>
 </table>
 
+<!-- ✅ テーブルを画像として保存するボタン -->
+<button class="save-table-btn" style="margin: 15px 0;">この表を画像として保存</button>
+
+<!-- ✅ html2canvas の読み込み（重複しても安全なのでそのまま貼ってOK） -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
+<script>
+// ✅ テーブル画像化スニペット（共通テンプレート）
+document.querySelector('.save-table-btn').addEventListener('click', () => {
+  const table = document.querySelector('table'); // ← テーブルが1つ前提
+
+  // 一時的にズレ防止のため CSS を補正
+  const originalBorderCollapse = table.style.borderCollapse;
+  table.style.borderCollapse = 'collapse';
+  table.style.backgroundColor = '#ffffff';
+  table.style.fontFamily = 'sans-serif';
+
+  html2canvas(table, {
+    scale: 2,    // 解像度アップ
+    useCORS: true
+  }).then(canvas => {
+    // CSSを元に戻す
+    table.style.borderCollapse = originalBorderCollapse;
+
+    // ダウンロード処理
+    const link = document.createElement('a');
+    link.href = canvas.toDataURL('image/png');
+    link.download = 'shogi-table.png';
+    link.click();
+  });
+});
+</script>
+
 <div class="free">
   <h3>自由欄</h3>
 <p>初期表示では通算タイトル獲得数二桁以上の棋士のみを表示しています。</p>
