--- a/rate.html
+++ b/rate.html
@@ -35,7 +35,38 @@
     <thead></thead>
     <tbody></tbody>
   </table>
-<button id="saveImageBtn" style="margin: 15px 0;">この表を画像として保存</button>
+
+<!-- ✅ テーブルを画像として保存するボタン -->
+<button class="save-table-btn" style="margin: 15px 0;">この表を画像として保存</button>
+
+<!-- ✅ html2canvas の読み込み -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+
+<script>
+// ✅ テーブル画像化スニペット（ファイル名 shogi-YYYY-MM-DD-HHMMSS.png 固定）
+document.querySelector('.save-table-btn').addEventListener('click', () => {
+  const table = document.querySelector('table'); // ← テーブル1個前提
+
+  const originalBorderCollapse = table.style.borderCollapse;
+  table.style.borderCollapse = 'collapse';
+  table.style.backgroundColor = '#ffffff';
+  table.style.fontFamily = 'sans-serif';
+
+  const now = new Date();
+  const date = now.toISOString().slice(0,10); // YYYY-MM-DD
+  const time = `${now.getHours().toString().padStart(2,'0')}${now.getMinutes().toString().padStart(2,'0')}${now.getSeconds().toString().padStart(2,'0')}`;
+  const fileName = `shogi-${date}-${time}.png`;
+
+  html2canvas(table, { scale: 2, useCORS: true }).then(canvas => {
+    table.style.borderCollapse = originalBorderCollapse;
+    const link = document.createElement('a');
+    link.href = canvas.toDataURL('image/png');
+    link.download = fileName;
+    link.click();
+  });
+});
+</script>
+      
 <div class="free">
   <h3>出典</h3>
   <p>1960〜2019年度の記録：将棋世界2020年6月号『追跡！藤井聡太2020』より</p>
@@ -226,29 +257,6 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </script>
 
-<!-- ✅ html2canvas 読み込み -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-
-<script>
-// ✅ 「この表を画像として保存」ボタン処理
-document.getElementById('saveImageBtn').addEventListener('click', () => {
-  const table = document.querySelector('table');
-
-  // 一時的に背景色やフォントを固定（ズレ防止）
-  table.style.backgroundColor = '#ffffff';
-  table.style.fontFamily = 'sans-serif';
-
-  html2canvas(table, {
-    scale: 2, // 解像度アップ
-    useCORS: true
-  }).then(canvas => {
-    const link = document.createElement('a');
-    link.href = canvas.toDataURL('image/png');
-    link.download = 'shogi-table.png';
-    link.click();
-  });
-});
-</script>
   </main>
   <footer>ヘッダー</footer>
 </body>
