--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>将棋の殿堂</title>
     <link rel="stylesheet" href="style.css">
+  <style>
+  body#index-page section, body#index-page .free {
+    border: none;
+    box-shadow: none;
+    padding: 0;
+    margin: 16px 0;
+  }
+</style>
 </head>
-<body>
+<body id="index-page">
 <header>
 <h1>将棋の殿堂</h1>
 </header>
