--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
       <li><a href="https://ulti-shogi.github.io/beta-open/rate.html">歴代年度勝率8割以上達成者</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/title-all.html">歴代タイトル獲得経験者</a></li>
       <li><a href="https://ulti-shogi.github.io/beta-open/prize-ranking.html">対局料・賞金ランキング一覧</a></li>
+      <li><a href="https://ulti-shogi.github.io/beta-open/rookie.html">歴代新人王戦結果一覧</a></li>
     </ul>
   </section>
 
