--- a/rookie.html
+++ b/rookie.html
@@ -56,7 +56,6 @@
   <footer>フッター</footer>
 
 <script>
-   
 document.addEventListener("DOMContentLoaded", () => {
   const tableHead = document.querySelector("table thead");
   const tableBody = document.querySelector("table tbody");
@@ -68,7 +67,7 @@ document.addEventListener("DOMContentLoaded", () => {
     .then(response => response.text())
     .then(csvText => {
       const rows = csvText.trim().split("\n").map(row => row.split(","));
-      const headers = rows.shift(); // 先頭行（ヘッダー）は使わないので削除
+      rows.shift(); // ヘッダー削除
 
       data = rows.map(row => {
         return {
@@ -89,41 +88,35 @@ document.addEventListener("DOMContentLoaded", () => {
       renderTable();
     });
 
-  // 検索条件の取得
   function getConditions() {
     const viewMode = document.querySelector("input[name='viewMode']:checked").value;
     const sortKey = document.querySelector("input[name='sortKey']:checked").value;
     const sortOrder = document.querySelector("input[name='sortOrder']:checked").value;
-    const yearRange = Number(document.getElementById("yearRange").value) || null; // 未入力ならnull
-    return { viewMode, sortKey, sortOrder, yearRange };
+    const limit = Number(document.getElementById("yearRange").value) || null; // 件数抽出に転用
+    return { viewMode, sortKey, sortOrder, limit };
   }
 
-  // 描画処理
   function renderTable() {
-    const { viewMode, sortKey, sortOrder, yearRange } = getConditions();
-    const currentYear = new Date().getFullYear();
+    const { viewMode, sortKey, sortOrder, limit } = getConditions();
 
-    // フィルタ処理（年度範囲）
-    let filtered = data;
-    if (yearRange) {
-      filtered = data.filter(row => Number(row["年度"]) >= currentYear - (yearRange - 1));
-    }
+    // ソート（元データ破壊を防ぐため slice()）
+    let sorted = data.slice().sort((a, b) => {
+      let keyA = sortKey === "age" ? a["日数換算"] : a[sortKey];
+      let keyB = sortKey === "age" ? b["日数換算"] : b[sortKey];
 
-    // ソート
-    filtered.sort((a, b) => {
-      let valA = a[sortKey === "age" ? "日数換算" : sortKey];
-      let valB = b[sortKey === "age" ? "日数換算" : sortKey];
+      keyA = isNaN(keyA) ? keyA : Number(keyA);
+      keyB = isNaN(keyB) ? keyB : Number(keyB);
 
-      if (sortKey !== "age") {
-        valA = isNaN(valA) ? valA : Number(valA);
-        valB = isNaN(valB) ? valB : Number(valB);
-      }
-
-      if (sortOrder === "asc") return valA > valB ? 1 : -1;
-      else return valA < valB ? 1 : -1;
+      if (sortOrder === "asc") return keyA > keyB ? 1 : -1;
+      else return keyA < keyB ? 1 : -1;
     });
 
-    // ヘッダー生成（モード依存）
+    // 件数制限
+    if (limit) {
+      sorted = sorted.slice(0, limit);
+    }
+
+    // ヘッダー生成
     let headers = ["期", "年度", "優勝者"];
     if (viewMode === "final") {
       headers.push("準優勝者", "勝敗");
@@ -136,7 +129,7 @@ document.addEventListener("DOMContentLoaded", () => {
     tableHead.innerHTML = `<tr>${headers.map(h => `<th>${h}</th>`).join("")}</tr>`;
 
     // ボディ生成
-    tableBody.innerHTML = filtered.map(row => {
+    tableBody.innerHTML = sorted.map(row => {
       let cells = [`<td>${row["期"]}</td>`, `<td>${row["年度"]}</td>`, `<td>${row["優勝者"]}</td>`];
       if (viewMode === "final") {
         cells.push(`<td>${row["準優勝者"]}</td>`, `<td>${row["勝敗"]}</td>`);
