--- a/rookie.html
+++ b/rookie.html
@@ -59,10 +59,20 @@ document.addEventListener("DOMContentLoaded", () => {
   const tableHead = document.querySelector("table thead");
   const tableBody = document.querySelector("table tbody");
 
-  // sortKey(ラジオ値) → CSV実列名の対応
-  const SORT_MAP = {
-    nendo: "年度",
-    age: "日数換算"
+  // 英数字列名 → 日本語表示ラベル
+  const LABELS = {
+    period: "期",
+    years: "年度",
+    winner: "優勝者",
+    score: "勝敗",
+    "runner-up": "準優勝",
+    result: "結果",
+    champion: "保持者",
+    birth: "生年月日",
+    victory: "優勝日",
+    age: "年齢",
+    days: "日数換算",
+    ranking: "順位"
   };
 
   let data = [];
@@ -72,20 +82,21 @@ document.addEventListener("DOMContentLoaded", () => {
     .then(res => res.text())
     .then(csvText => {
       const rows = csvText.trim().split("\n").map(r => r.split(","));
-      rows.shift(); // ヘッダー除去
+      const headers = rows.shift(); // ヘッダーは読み捨て
 
       data = rows.map(row => ({
-        "期": row[0],
-        "年度": row[1],
-        "優勝者": row[2],
-        "勝敗": row[3],
-        "準優勝者": row[4],
-        "記念対局の勝敗": row[5],
-        "記念対局の相手": row[6],
-        "生年月日": row[7],
-        "優勝日": row[8],
-        "優勝年齢": row[9],
-        "日数換算": Number(row[10])
+        period: row[0],
+        years: row[1],
+        winner: row[2],
+        score: row[3],
+        "runner-up": row[4],
+        result: row[5],
+        champion: row[6],
+        birth: row[7],
+        victory: row[8],
+        age: row[9],
+        days: Number(row[10]),
+        ranking: row[11]
       }));
 
       renderTable();
@@ -93,59 +104,48 @@ document.addEventListener("DOMContentLoaded", () => {
 
   function getConditions() {
     const viewMode = document.querySelector("input[name='viewMode']:checked").value;
-    const sortKey = document.querySelector("input[name='sortKey']:checked").value;
-    const sortOrder = document.querySelector("input[name='sortOrder']:checked").value;
-    const limit = Number(document.getElementById("yearRange").value) || null; // 件数抽出
+    const sortKey = document.querySelector("input[name='sortKey']:checked").value; // nendo / age
+    const sortOrder = document.querySelector("input[name='sortOrder']:checked").value; // asc / desc
+    const limit = Number(document.getElementById("yearRange").value) || null; // 件数フィルタ
     return { viewMode, sortKey, sortOrder, limit };
   }
 
   function normalize(val) {
     const n = Number(val);
-    return Number.isNaN(n) ? val : n; // 数値にできるものは数値化
+    return Number.isNaN(n) ? val : n;
   }
 
   function renderTable() {
     const { viewMode, sortKey, sortOrder, limit } = getConditions();
-    const field = SORT_MAP[sortKey] || "期"; // 実列名にマップ
 
-    // 並び替え（元配列を触らない）
+    const field = sortKey === "age" ? "days" : "years"; // 年度 or 年齢(=days)
+
     let sorted = data.slice().sort((a, b) => {
-      let A = normalize(a[field]);
-      let B = normalize(b[field]);
-
+      const A = normalize(a[field]);
+      const B = normalize(b[field]);
       if (A < B) return sortOrder === "asc" ? -1 : 1;
       if (A > B) return sortOrder === "asc" ? 1 : -1;
       return 0;
     });
 
-    // 件数制限（上位◯件）
     if (limit) sorted = sorted.slice(0, limit);
 
-    // ヘッダー
-    const headers = (() => {
-      const base = ["期", "年度", "優勝者"];
-      if (viewMode === "final") return [...base, "準優勝者", "勝敗"];
-      if (viewMode === "memorial") return [...base, "記念対局の相手", "記念対局の勝敗"];
-      if (viewMode === "age") return [...base, "優勝年齢"];
-      return base;
-    })();
-    tableHead.innerHTML = `<tr>${headers.map(h => `<th>${h}</th>`).join("")}</tr>`;
+    let headers = ["period", "years", "winner"];
+    if (viewMode === "final") {
+      headers.push("score", "runner-up");
+    } else if (viewMode === "memorial") {
+      headers.push("result", "champion");
+    } else if (viewMode === "age") {
+      headers.push("age", "ranking");
+    }
 
-    // ボディ
+    tableHead.innerHTML = `<tr>${headers.map(key => `<th>${LABELS[key]}</th>`).join("")}</tr>`;
+
     tableBody.innerHTML = sorted.map(row => {
-      const base = [`<td>${row["期"]}</td>`, `<td>${row["年度"]}</td>`, `<td>${row["優勝者"]}</td>`];
-      if (viewMode === "final") {
-        base.push(`<td>${row["準優勝者"]}</td>`, `<td>${row["勝敗"]}</td>`);
-      } else if (viewMode === "memorial") {
-        base.push(`<td>${row["記念対局の相手"]}</td>`, `<td>${row["記念対局の勝敗"]}</td>`);
-      } else if (viewMode === "age") {
-        base.push(`<td>${row["優勝年齢"]}</td>`);
-      }
-      return `<tr>${base.join("")}</tr>`;
+      return `<tr>${headers.map(key => `<td>${row[key] || ""}</td>`).join("")}</tr>`;
     }).join("");
   }
 
-  // UIイベント
   document.querySelectorAll("input[name='viewMode'], input[name='sortKey'], input[name='sortOrder']")
     .forEach(el => el.addEventListener("change", renderTable));
 
